# Changelog

## Version 4.7.0

* Adding #163 audio matching in profiles (thanks to bmcassagne)
* Adding #261 Advanced settings are currently not saved on Profiles (thanks to georgesaumen)
* Adding HDR10 support, svtav1-params, scene detection, and crf option for SVT AV1
* Adding max colors and stats mode to GIF
* Adding OpenCL support for Remove HDR to speed it up
* Changing FFmpeg download to look for latest master GPL builds
* Fixing #296 low quality auto-crop due to high rounding, increasing accuracy from 16 to 2 pixels (thanks to Rayman24365)
* Fixing concat builder behavior to work smoother
* Fixing thumbnail generation for concat images

## Version 4.6.0

* Adding #195 640kbps audio (thanks to ObviousInRetrospect and Harybo)
* Adding Japanese, Portuguese, Russian, Swedish, and Polish translations
* Fixing #272 Codec drop down size fix (thanks to kachijs)
* Fixing #278 FastFlix occasionally getting stuck on a single video in a queue (thanks to kamild_)
* Fixing build for 3.10 by updating to PySide6 6.2.2.1 (thanks to Nhunz)
* Fixing status parser when using -psnr (thanks to ObviousInRetrospect)
* Fixing VCE and NVENC encoders would set first subtitle track to default

## Version 4.5.1

* Fixing #273 Realtime VP9 bitrate mode must be single pass (thanks to Owen Quinlan)

## Version 4.5.0

* Adding #267 new onyx theme with custom icons (thanks to Joey Catt | Onyx Studios)
* Adding signing of Windows executables
* Adding new light and dark theme using BreezeStyles
* Adding #115 ability to provide concat file (thanks to Marco Ravich)
* Adding support for brightness, contrast and saturation filters
* Adding PySide6 as main GUI provider, now MIT licensed frontend!

## Version 4.4.2

* Fixing #264 changelog encoding was causing crashes on non utf-8 systems (thanks to lobofoot)

## Version 4.4.1

* Fixing colorspace details from advanced page not applied to x265 (thanks to Tình Em Là Đại Dương)

## Version 4.4.0
